# STAR_rs

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/opal-sys/: Cargo.toml  build.rs
crates/opal-sys/src/: lib.rs
crates/opal-sys/tests/: smoke.rs
crates/star-align/: Cargo.toml
crates/star-align/src/: calc_cigar.rs  chunk.rs  clip.rs  lib.rs  map_one_read.rs  mapped_filter.rs  mult_map_select.rs  one_read.rs  output_sam.rs  pe_overlap.rs  read_align.rs  rng.rs  seed.rs  stitch.rs  stitch_pieces.rs  stitch_window.rs  store_aligns.rs  threads.rs  transcript.rs  windows.rs
crates/star-bam/: Cargo.toml
crates/star-bam/src/: bam_cat.rs  bam_functions.rs  bam_output.rs  bam_remove_dups.rs  bam_sort_bin.rs  bam_sort_coord.rs  bam_sort_feed.rs  bam_sort_record.rs  bam_sort_unmapped.rs  lib.rs  sam_headers.rs  sam_output.rs  sam_to_bam.rs  signal_from_bam.rs
crates/star-bam/tests/: bam_output_algorithm.rs
crates/star-chimeric/: Cargo.toml
crates/star-chimeric/src/: align.rs  detection.rs  lib.rs  segment.rs
crates/star-cli/: Cargo.toml
crates/star-cli/src/: main.rs
crates/star-cli/tests/: align_log_final.rs  cli_usage.rs  compressed_inputs.rs  genome_generate_gtf.rs
crates/star-core/: Cargo.toml
crates/star-core/src/: compression.rs  error.rs  lib.rs  packed.rs  seq.rs  service.rs  time.rs  types.rs  util.rs
crates/star-genome/: Cargo.toml
crates/star-genome/src/: fasta.rs  generate.rs  genome.rs  io.rs  lib.rs  load.rs  sa.rs  sa_funs.rs  sa_index.rs  sa_sort.rs
crates/star-io/: Cargo.toml
crates/star-io/src/: fastx_chunk.rs  lib.rs  read_load.rs  reads_files.rs  sam_headers.rs  streams.rs
crates/star-params/: Cargo.toml  build.rs
crates/star-params/src/: defaults.rs  lib.rs  parameters.rs  sam_attributes.rs
crates/star-quant/: Cargo.toml
crates/star-quant/src/: lib.rs  quant.rs  transcriptome.rs
crates/star-sjdb/: Cargo.toml
crates/star-sjdb/src/: binary_search2.rs  build_index.rs  gtf.rs  insert_junctions.rs  lib.rs  loader.rs  out_sj.rs  output_sj.rs  prepare.rs  sjdb_class.rs  twopass.rs
crates/star-stats/: Cargo.toml
crates/star-stats/src/: lib.rs  stats.rs
docs/: regression-notes.md  roadmap.md  star_rust_port_plan_3ec86fb7.plan.md
docs/superpowers/plans/: 2026-04-17-github-ci-multi-platform-release.md  2026-04-18-bam-sorted-by-coord-phase-2a.md
docs/superpowers/specs/: 2026-04-17-github-ci-multi-platform-release-design.md  2026-04-24-compressed-text-inputs.md
tests/: README.md  e2e.sh
tests/fixtures/chimtest/: chr.fa  mk_chim.py  r.fq
tests/fixtures/gctest/: ann.gtf  chr.fa  mk_gc.py  r.fq
tests/fixtures/sjtest/: chr.fa  mk_sj.py  r.fq  sj.tab
tests/fixtures/tiny/: chr1.fa  reads.fq  reads_r1.fq  reads_r2.fq
tools/: diff_star_output.sh
