[package]
name = "star-align"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "STAR read alignment core"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
star-core.workspace = true
star-params.workspace = true
star-genome.workspace = true
star-io.workspace = true
star-stats.workspace = true
star-sjdb.workspace = true
opal-sys.workspace = true

[lints]
workspace = true
