[package]
name = "star-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "STAR CLI — Rust port"
default-run = "star"

[[bin]]
name = "star"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
star-core.workspace = true
star-params.workspace = true
star-genome.workspace = true
star-io.workspace = true
star-align.workspace = true
star-chimeric.workspace = true
star-quant.workspace = true
star-bam.workspace = true
star-sjdb.workspace = true
star-stats.workspace = true

[dev-dependencies]
flate2.workspace = true
bzip2.workspace = true
xz2.workspace = true

[lints]
workspace = true
