[package]
name = "star-params"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "STAR parameters + parametersDefault embedded"
build = "build.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
star-core.workspace = true

[build-dependencies]
chrono = { workspace = true }

[lints]
workspace = true
