[package]
name = "star-quant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "STAR Transcriptome quantification"

[dependencies]
anyhow.workspace = true
star-core.workspace = true
star-params.workspace = true
star-align.workspace = true
